k8s/applications/media/sabnzbd/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
  labels:
    app: sabnzbd
    kubernetes.io/name: "sabnzbd"
spec:
  clusterIP: None
  selector:
    app: sabnzbd
  ports:
  - name: sabnzbd
    port: 80
    targetPort: 8080
